Adjust sticky column position and background color for solving bug about horizontal scroll

--- a/frontend/module/fase-overview/phases-overview.component.sass
+++ b/frontend/module/fase-overview/phases-overview.component.sass
@@ -238,7 +238,9 @@
 
   .sticky-column-2
     position: sticky
+    left: 200px
     z-index: 5
+    background-color: white
 
     &.indirizzo-impianto-column
       z-index: 11
